--- a/02 Mega Bus/style.css
+++ b/02 Mega Bus/style.css
@@ -107,6 +107,8 @@ nav ul li a:hover, a.active{
     padding: 2px;
     margin: 10px 10px 0px 0px;
     word-spacing: 20px;
+    border-radius: 5px;
+   
 }
 .btn-style{
     display: block;
@@ -121,4 +123,17 @@ nav ul li a:hover, a.active{
 .amount{
     display: flex;
     justify-content: space-between;
+}
+#contact{
+    display: none;
+    width:1000px;
+    height:500px;
+    margin:500px 100px 20px;
+    padding:50px 20px;
+    background-color: indigo;
+    border-radius: 10px;
+}
+.img-footer{
+    width: 400px;
+    height:250px
 }
